--- a/Module-2/CAS-D1-Probability.ipynb
+++ b/Module-2/CAS-D1-Probability.ipynb
@@ -931,25 +931,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.10466918336534053 0.5557755727497353\n",
-      "24.0 14.399999999999999\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "p24     = scipy.stats.binom.pmf(24,60,0.4) # \n",
-    "pLEQ24  = scipy.stats.binom.cdf(24,60,0.4) #\n",
-    "\n",
-    "print(p24,pLEQ24)\n",
-    "mean, var, skew, kurt = scipy.stats.binom.stats(60, 0.4, moments='mvsk')\n",
-    "print(mean, var)\n"
+    "#write your code here\n"
    ]
   },
   {
