--- a/Module-2/CAS-D1-Probability.ipynb
+++ b/Module-2/CAS-D1-Probability.ipynb
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In practise the measurement process, the data taking, is a random, or stochastic, process. The outcome varies from measurement to measurement. There are three (at least) reasons:\n",
+    "In practice the measurement process, the data taking, is a random, or stochastic, process. The outcome varies from measurement to measurement. There are three (at least) reasons:\n",
     "\n",
     "- Measurements are normally on a sample, not the full population. Samples fluctuate.\n",
     "- Sensors have limited resolution, measurements on the same sample vary within the resolution \n",
@@ -158,13 +158,6 @@
     "x = np.linspace(-20,20,400) # 400 bins from -20 to 20\n",
     "plt.plot(x, scipy.stats.norm.pdf(x,0,5))\n",
     "plt.plot(x, scipy.stats.norm.pdf(x,0,2))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If does a normal distribution mean for the expected outcomes of a measurement? "
    ]
   },
   {
@@ -248,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The **quantile $x_{\\alpha}$** is the value of the random variable x at which $\\alpha$% of the area is above x. An important special case is the **median, $x_{med} \\equiv x_{50}$**. At the median half the area lies above and half lies below. \n",
+    "The **quantile $x_{\\alpha}$** is the value of the random variable x at which $\\alpha$% of the area is below x. An important special case is the **median, $x_{med} \\equiv x_{50}$**. At the median half the area lies above and half lies below. \n",
     "For the normal p.d.f. the median equals the mean. The most probable value of a distribution is called **mode**. \n",
     "\n",
     "Special quantiles are the quartiles and percentiles. The first quartile is the $x_{25}$, the second the $x_{50}$ etc. Percentiles are for example $x_{13}$ etc. \n",
@@ -277,19 +270,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Get some desciptive statistics from a normal (continous) p.d.f. with mean 0 and SD 2."
+    "Get some desciptive statistics from a normal (continous) p.d.f. with mean 0 and SD 4."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0 16.0 0.0 0.0\n"
+     "ename": "NameError",
+     "evalue": "name 'scipy' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-33fc1dcfdac4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvariance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mskewness\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkurtosis\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmoments\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'mvsk'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvariance\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mskewness\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkurtosis\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'scipy' is not defined"
      ]
     }
    ],
@@ -906,9 +903,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It is hard to say by eye if the distributions are normally distributed. Tomorrow we'll use statistical tests to find that out. The binning is also not equal. To define equal binnings see example from yesterday. The petal length is funny.\n",
+    "It is hard to say by eye if the distributions are normally distributed. Later this week, we'll use statistical tests to find that out. The binning is also not equal. To define equal binnings see example from yesterday. The petal length is funny.\n",
     "\n",
-    "We can complete our descriptive studies by looking at the scatter plots (correlations). This we did yesterday.\n"
+    "We can complete our descriptive studies by looking at the scatter plots (correlations). \n"
    ]
   },
   {
