--- a/Module-2/CAS-D3-Hypothesis-Testing.ipynb
+++ b/Module-2/CAS-D3-Hypothesis-Testing.ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do you still think our (stupid) null hypothesis is valid ?\n",
+    "Do you still think our null hypothesis is valid ?\n",
     "\n",
     "1 - CDF is the p-value. If you want to know more about CDF, read this: https://en.wikipedia.org/wiki/Cumulative_distribution_function\n",
     "\n",
