--- a/Module-2/CAS-D4-StatisticsSummary.ipynb
+++ b/Module-2/CAS-D4-StatisticsSummary.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "**Situation (fictional):**\n",
     "\n",
-    "Some new company v4Setosa recently sequenced the genes of the Iris species Setosa and patented it, apparently in order to preserve this species because it is so beatiful. Due this patent it is not allowed to change the plant.\n",
+    "Some new company v4Setosa recently sequenced the genes of the Iris species Setosa and patented it, apparently in order to preserve this species because it is so beautiful. Due this patent it is not allowed to change the plant.\n",
     "\n",
     "A big farmer and hater of Iris and with a field where Iris is a disturbing weed, has been using a new product from Sonte Manto for a couple of years. The product is supposed to effectively kill Iris plants.\n",
     "\n",
@@ -748,7 +748,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A discrimination should work very well. However, we don't see the full distribution and this is just by eye. I will take a look at the setosa version of the plot, too."
+    "A discrimination should work very well. However, we don't see the full distribution and this is just by eye. I will take a look at the sepal version of the plot, too."
    ]
   },
   {
@@ -1214,9 +1214,9 @@
    "source": [
     "## Conclusion\n",
     "\n",
-    "Our data analysis cannot confirm the claim of v4setosa. There absolute no evidence for the claim in our independent study. We advice the court to judge for not duilty. \n",
+    "Our data analysis cannot confirm the claim of v4setosa. There is absolutely no evidence for the claim in our independent study. We advice the court to judge for not guilty. \n",
     "\n",
-    "(And we sent a very large bill which the looser v4setosa had to pay. v4setosa went bankrott and we cannot sleep anymore, as may did some mistake...)\n",
+    "(And we sent a very large bill which the looser v4setosa had to pay. v4setosa went bankrott and we cannot sleep anymore...)\n",
     "\n",
     "## Remarks regarding the poster session\n",
     "\n",
@@ -1224,6 +1224,13 @@
     "\n",
     "Considering that you may need longer due to less experience, this is what is expected from you for the poster session (about 30h work)."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
