--- a/Module-1/M1-D1-DM.ipynb
+++ b/Module-1/M1-D1-DM.ipynb
@@ -232,7 +232,7 @@
             }
           },
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 38
         },
         "id": "2va7jftt06qF",
         "outputId": "4cb50dd0-6f35-4851-cef8-b9bc96b5301d"
@@ -306,7 +306,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 670
         },
         "id": "sfWe0grO06qJ",
         "outputId": "998b32e2-623a-4262-c02d-6b515f268ddf"
@@ -1964,7 +1964,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 422
+          "height": 419
         },
         "id": "6Widtyr806qR",
         "outputId": "ebd8065d-948c-4736-bafc-d01b547a39f5"
@@ -2296,11 +2296,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "D0mwR_jFZsbk",
-        "outputId": "e0e21a27-ae7c-4ffb-8e75-a1376e31d6d0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "D0mwR_jFZsbk",
+        "outputId": "e0e21a27-ae7c-4ffb-8e75-a1376e31d6d0"
       },
       "source": [
         "!ls -l newnbdir"
@@ -2346,19 +2346,425 @@
       "source": [
         "### Exercise 4 \n",
         "\n",
-        "Print the list of Swiss cantons with the number of registered positive COVID19 tests since March. The list should be sorted so that the highest number occurs first. This should be doable with 3-10 lines of Python.\n"
+        "Print a sorted list of the weeks and the male deadths with COVID-19 in Switzerland. The weeks with the highest numbers should appear first. This should be doable with about 10 lines of Python. You may need 30 minutes to solve this one.\n"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7UPCsexM06qT"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 955
+        },
+        "id": "7UPCsexM06qT",
+        "outputId": "f07b242d-e68a-40c4-949a-858dd81054bb"
       },
       "source": [
-        ""
+        "url = 'https://www.covid19.admin.ch/api/data/20210824-jrvdp23s/sources/COVID19Test_geoRegion_all.json'\n",
+        "#df_cov = pd.io.json.read_json(url)\n",
+        "url = 'https://www.covid19.admin.ch/api/data/20210824-jrvdp23s/sources/COVID19Death_geoRegion_sex_w.csv'\n",
+        "df_cov = pd.read_csv(url)\n",
+        "print(df_cov.info())\n",
+        "df_cov.head(3)\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 105,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 8424 entries, 0 to 8423\n",
+            "Data columns (total 28 columns):\n",
+            " #   Column                Non-Null Count  Dtype  \n",
+            "---  ------                --------------  -----  \n",
+            " 0   sex                   8424 non-null   object \n",
+            " 1   geoRegion             8424 non-null   object \n",
+            " 2   datum                 8424 non-null   int64  \n",
+            " 3   entries               8424 non-null   int64  \n",
+            " 4   timeframe_all         8424 non-null   bool   \n",
+            " 5   timeframe_phase2      8424 non-null   bool   \n",
+            " 6   timeframe_phase2b     8424 non-null   bool   \n",
+            " 7   timeframe_phase3      8424 non-null   bool   \n",
+            " 8   timeframe_vacc_info   8424 non-null   bool   \n",
+            " 9   timeframe_28d         8424 non-null   bool   \n",
+            " 10  timeframe_14d         8424 non-null   bool   \n",
+            " 11  sumTotal              8424 non-null   int64  \n",
+            " 12  offset_vacc_info      8424 non-null   int64  \n",
+            " 13  sumTotal_vacc_info    8424 non-null   int64  \n",
+            " 14  freq                  4725 non-null   float64\n",
+            " 15  prct                  4725 non-null   float64\n",
+            " 16  pop                   5616 non-null   float64\n",
+            " 17  inz_entries           5616 non-null   float64\n",
+            " 18  inzsumTotal           5616 non-null   float64\n",
+            " 19  type                  8424 non-null   object \n",
+            " 20  type_variant          8424 non-null   object \n",
+            " 21  version               8424 non-null   object \n",
+            " 22  datum_unit            8424 non-null   object \n",
+            " 23  datum_dboardformated  8424 non-null   object \n",
+            " 24  entries_diff_abs      8316 non-null   float64\n",
+            " 25  entries_diff_inz      5544 non-null   float64\n",
+            " 26  entries_diff_pct      2618 non-null   float64\n",
+            " 27  prct_diff             3948 non-null   float64\n",
+            "dtypes: bool(7), float64(9), int64(5), object(7)\n",
+            "memory usage: 1.4+ MB\n",
+            "None\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>sex</th>\n",
+              "      <th>geoRegion</th>\n",
+              "      <th>datum</th>\n",
+              "      <th>entries</th>\n",
+              "      <th>timeframe_all</th>\n",
+              "      <th>timeframe_phase2</th>\n",
+              "      <th>timeframe_phase2b</th>\n",
+              "      <th>timeframe_phase3</th>\n",
+              "      <th>timeframe_vacc_info</th>\n",
+              "      <th>timeframe_28d</th>\n",
+              "      <th>timeframe_14d</th>\n",
+              "      <th>sumTotal</th>\n",
+              "      <th>offset_vacc_info</th>\n",
+              "      <th>sumTotal_vacc_info</th>\n",
+              "      <th>freq</th>\n",
+              "      <th>prct</th>\n",
+              "      <th>pop</th>\n",
+              "      <th>inz_entries</th>\n",
+              "      <th>inzsumTotal</th>\n",
+              "      <th>type</th>\n",
+              "      <th>type_variant</th>\n",
+              "      <th>version</th>\n",
+              "      <th>datum_unit</th>\n",
+              "      <th>datum_dboardformated</th>\n",
+              "      <th>entries_diff_abs</th>\n",
+              "      <th>entries_diff_inz</th>\n",
+              "      <th>entries_diff_pct</th>\n",
+              "      <th>prct_diff</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>male</td>\n",
+              "      <td>CH</td>\n",
+              "      <td>202009</td>\n",
+              "      <td>0</td>\n",
+              "      <td>True</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4800</td>\n",
+              "      <td>0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>4268863.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>COVID19Death</td>\n",
+              "      <td>sex</td>\n",
+              "      <td>2021-08-24_07-51-17</td>\n",
+              "      <td>isoweek</td>\n",
+              "      <td>2020-09</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>female</td>\n",
+              "      <td>CH</td>\n",
+              "      <td>202009</td>\n",
+              "      <td>0</td>\n",
+              "      <td>True</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4120</td>\n",
+              "      <td>0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>4337170.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>COVID19Death</td>\n",
+              "      <td>sex</td>\n",
+              "      <td>2021-08-24_07-51-17</td>\n",
+              "      <td>isoweek</td>\n",
+              "      <td>2020-09</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>unknown</td>\n",
+              "      <td>CH</td>\n",
+              "      <td>202009</td>\n",
+              "      <td>0</td>\n",
+              "      <td>True</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>False</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>COVID19Death</td>\n",
+              "      <td>sex</td>\n",
+              "      <td>2021-08-24_07-51-17</td>\n",
+              "      <td>isoweek</td>\n",
+              "      <td>2020-09</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       sex geoRegion   datum  ...  entries_diff_inz  entries_diff_pct  prct_diff\n",
+              "0     male        CH  202009  ...               NaN               NaN        NaN\n",
+              "1   female        CH  202009  ...               NaN               NaN        NaN\n",
+              "2  unknown        CH  202009  ...               NaN               NaN        NaN\n",
+              "\n",
+              "[3 rows x 28 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 105
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0G9RWCiH3DLC",
+        "outputId": "872b444c-dbf2-4063-b0e3-8bd727c59534",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 758
+        }
+      },
+      "source": [
+        "g = df_cov.groupby('sex')\n",
+        "print(g.size())\n",
+        "df_mdeaths = g.get_group('male')\n",
+        "#df_mdeaths[50:52]\n",
+        "df_mdeaths_sorted = df_mdeaths.sort_values('entries',ascending=None)\n",
+        "df_mdeaths_sorted[['datum_dboardformated','entries']].head(20)"
+      ],
+      "execution_count": 109,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "sex\n",
+            "female     2808\n",
+            "male       2808\n",
+            "unknown    2808\n",
+            "dtype: int64\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>datum_dboardformated</th>\n",
+              "      <th>entries</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>348</th>\n",
+              "      <td>2020-47</td>\n",
+              "      <td>343</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>351</th>\n",
+              "      <td>2020-48</td>\n",
+              "      <td>341</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>114</th>\n",
+              "      <td>2020-47</td>\n",
+              "      <td>340</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>117</th>\n",
+              "      <td>2020-48</td>\n",
+              "      <td>340</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>108</th>\n",
+              "      <td>2020-45</td>\n",
+              "      <td>319</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>342</th>\n",
+              "      <td>2020-45</td>\n",
+              "      <td>319</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>360</th>\n",
+              "      <td>2020-51</td>\n",
+              "      <td>317</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>357</th>\n",
+              "      <td>2020-50</td>\n",
+              "      <td>316</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>111</th>\n",
+              "      <td>2020-46</td>\n",
+              "      <td>314</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>345</th>\n",
+              "      <td>2020-46</td>\n",
+              "      <td>314</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>123</th>\n",
+              "      <td>2020-50</td>\n",
+              "      <td>314</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>126</th>\n",
+              "      <td>2020-51</td>\n",
+              "      <td>311</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>354</th>\n",
+              "      <td>2020-49</td>\n",
+              "      <td>311</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>120</th>\n",
+              "      <td>2020-49</td>\n",
+              "      <td>310</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>363</th>\n",
+              "      <td>2020-52</td>\n",
+              "      <td>306</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>129</th>\n",
+              "      <td>2020-52</td>\n",
+              "      <td>301</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>366</th>\n",
+              "      <td>2020-53</td>\n",
+              "      <td>282</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>132</th>\n",
+              "      <td>2020-53</td>\n",
+              "      <td>280</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>369</th>\n",
+              "      <td>2021-01</td>\n",
+              "      <td>241</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>135</th>\n",
+              "      <td>2021-01</td>\n",
+              "      <td>238</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "    datum_dboardformated  entries\n",
+              "348              2020-47      343\n",
+              "351              2020-48      341\n",
+              "114              2020-47      340\n",
+              "117              2020-48      340\n",
+              "108              2020-45      319\n",
+              "342              2020-45      319\n",
+              "360              2020-51      317\n",
+              "357              2020-50      316\n",
+              "111              2020-46      314\n",
+              "345              2020-46      314\n",
+              "123              2020-50      314\n",
+              "126              2020-51      311\n",
+              "354              2020-49      311\n",
+              "120              2020-49      310\n",
+              "363              2020-52      306\n",
+              "129              2020-52      301\n",
+              "366              2020-53      282\n",
+              "132              2020-53      280\n",
+              "369              2021-01      241\n",
+              "135              2021-01      238"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 109
+        }
+      ]
     },
     {
       "cell_type": "markdown",
