--- a/Module-1/M1_Web_Scraping/1-Tutorials/1_Web_Scraping_Tutorial.ipynb
+++ b/Module-1/M1_Web_Scraping/1-Tutorials/1_Web_Scraping_Tutorial.ipynb
@@ -353,8 +353,7 @@
         "\n",
         "---\n",
         "\n",
-        "\n",
-        ">  <font color='teal'> **In-class exercise**: Check out this simple page to see how all of this works: http://repec.sowi.unibe.ch/varia/example-page.html. If you right-click on the page, you should be able to select \"View source code\". You can also click on \"Inspect\" (German: \"Element untersuchen\") to see which part of the code refers to which part on the web page! If you need to scrape a particular element from a page, this is usually a good starting point.\n",
+        ">  <font color='teal'> **In-class exercise**: Check out this simple page to see how all of this works: https://scits-training.unibe.ch/example-page.html. If you right-click on the page, you should be able to select \"View source code\". You can also click on \"Inspect\" (German: \"Element untersuchen\") to see which part of the code refers to which part on the web page! If you need to scrape a particular element from a page, this is usually a good starting point.\n",
         ">\n",
         ">  <font color='teal'> Try to answer the following questions:\n",
         ">\n",
@@ -425,8 +424,7 @@
         "id": "sb6I2iAlCmWq"
       },
       "source": [
-        "#r = requests.get(\"http://repec.sowi.unibe.ch/varia/example-page.html\")\n",
-        "r = requests.get(\"https://www.dsl.unibe.ch/events/cas_graduation_ceremony_2022/\")\n",
+        "r = requests.get(\"https://scits-training.unibe.ch/example-page.html\")\n",
         "type(r)"
       ],
       "execution_count": null,
@@ -706,8 +704,7 @@
         "id": "hCyXPJCugDtu"
       },
       "source": [
-        "#r = requests.get(\"http://repec.sowi.unibe.ch/varia/example-page.html\")\n",
-        "r = requests.get(\"https://www.dsl.unibe.ch/events/cas_graduation_ceremony_2022/\")\n",
+        "r = requests.get(\"https://scits-training.unibe.ch/example-page.html\")\n",
         "r.text"
       ],
       "execution_count": null,
@@ -1360,7 +1357,7 @@
         "id": "Y3YNthf2NXqI"
       },
       "source": [
-        "r = requests.get(\"http://repec.sowi.unibe.ch/varia/example-page.html\") "
+        "r = requests.get(\"https://scits-training.unibe.ch/example-page.html\") "
       ],
       "execution_count": null,
       "outputs": []
@@ -1508,14 +1505,31 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Fpl4mOkgYwsD"
+        "id": "Fpl4mOkgYwsD",
+        "outputId": "58a1c16e-cafa-4b92-8f0e-41c2be1e8d6d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 183
+        }
       },
       "source": [
-        "tables_list = pd.read_html(\"http://repec.sowi.unibe.ch/varia/example-page.html\") # request tables from example page\n",
+        "tables_list = pd.read_html(\"https://scits-training.unibe.ch/example-page.html\") # request tables from example page\n",
         "type(tables_list) # return object is a list"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-c5f8965bf280>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtables_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_html\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"https://scits-training.unibe.ch/example-page.html\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# request tables from example page\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtables_list\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# return object is a list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
