--- a/Module-1/M1-D1-DM.ipynb
+++ b/Module-1/M1-D1-DM.ipynb
@@ -22,10 +22,21 @@
     "colab": {
       "name": "M1-D1-DM.ipynb",
       "provenance": [],
-      "toc_visible": true
+      "toc_visible": true,
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sigvehaug/CAS-Applied-Data-Science/blob/master/Module-1/M1-D1-DM.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -41,9 +52,9 @@
         "id": "ljJDZt-n6zPw"
       },
       "source": [
-        "Prerequisite for this notebook is some basic Python experience. \n",
+        "Prerequisite for this notebook is some basic Python experience.\n",
         "\n",
-        "Please also look at the first batch of [these slides](https://docs.google.com/presentation/d/1BrlQQGDnEpr8lBiEd9uO-Kw2-WOInAEP-cv-xdUwB4Y/edit?usp=sharing) before doing this notebook. They offer an introduction to data. "
+        "Please also look at the first batch of [these slides](https://docs.google.com/presentation/d/1BrlQQGDnEpr8lBiEd9uO-Kw2-WOInAEP-cv-xdUwB4Y/edit?usp=sharing) before doing this notebook. They offer an introduction to data."
       ]
     },
     {
@@ -72,7 +83,7 @@
         "     1. Getting used to Jupyter lab\n",
         "     2. Import datasets into a Python dataframe\n",
         "     3. Indexing on a dataframe\n",
-        "     4. Sorting \n",
+        "     4. Sorting\n",
         "     5. Filtering\n",
         "     6. Exporting\n",
         "     7. Missing and bad data\n",
@@ -85,18 +96,14 @@
       "metadata": {
         "id": "b-86pc1PfWAT"
       },
-      "source": [
-        ""
-      ]
+      "source": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "P0o4Jxdy06qA"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -115,11 +122,11 @@
         "id": "nFyhF-jp06qB"
       },
       "source": [
-        "Handling or managing data involves many steps and technologies at many levels. Data my be colleccted by sensors. It can be a camera, a temperature sensor, a telescope, a microscope (with a camera), a microphone, a particle detector etc. Normally the data is then digitised, maybe preprocessed and written to some media in a certain format, e.g. hard disk. This part of the data management is normally taken care of by engineers. \n",
+        "Handling or managing data involves many steps and technologies at many levels. Data my be colleccted by sensors. It can be a camera, a temperature sensor, a telescope, a microscope (with a camera), a microphone, a particle detector etc. Normally the data is then digitised, maybe preprocessed and written to some media in a certain format, e.g. hard disk. This part of the data management is normally taken care of by engineers.\n",
         "\n",
-        "Data may also be collected from all sorts of databases, so data already collected somehow. Time series of financial data, customers, passengers, facebook likes, twitter tweets etc. This is data which is normally already on a media with some interface for access, e.g. paper to be read by a camera, a file on youtube, a table on wikipedia etc. We will look at some ways to collect such data. Some programming and computer skills are needed to do so. It may be that this part of the data management is taken care of by specialised computer scientists, but it may also be expected from a data scientist to have these skills. \n",
+        "Data may also be collected from all sorts of databases, so data already collected somehow. Time series of financial data, customers, passengers, facebook likes, twitter tweets etc. This is data which is normally already on a media with some interface for access, e.g. paper to be read by a camera, a file on youtube, a table on wikipedia etc. We will look at some ways to collect such data. Some programming and computer skills are needed to do so. It may be that this part of the data management is taken care of by specialised computer scientists, but it may also be expected from a data scientist to have these skills.\n",
         "\n",
-        "Analysing data with statisitical and machine learning tools, requires that the data is colleceted, cleaned and prepared for the tools. This is very often a very large part of a data analytics project and a prerequisite. It may involve removing bad data, filter out redundant and noisy data, unify the formats and types, transform the data etc. \n",
+        "Analysing data with statisitical and machine learning tools, requires that the data is colleceted, cleaned and prepared for the tools. This is very often a very large part of a data analytics project and a prerequisite. It may involve removing bad data, filter out redundant and noisy data, unify the formats and types, transform the data etc.\n",
         "Thus, a data scientist must be able to perform this part of the data management. This notebook shows the basic operations with Python pandas. With other tools the concepts and operations are very similar.\n",
         "\n",
         "After the data analysis, after the extraction of information and the creation of knowledge, the data is often stored or archived for the future (if this seems cheaper than regenerating the data at a later point). In larger institutions this part of the data management may include educated librarians and others, not necessarily the data scientist.  \n",
@@ -137,7 +144,7 @@
       "source": [
         "### 1. Getting used to Jupyter computational notebooks and Colab\n",
         "\n",
-        "With Jupyter you can write rich text notebooks with executable code via your browser. There are several so-called kernels or computational back ends, i.e Python, R, Julia, bash etc can be supported. The text is written as Markdown. Latex is also supported (good for math). You can export the notebook in various formats, e.g. html. Everything can be done via the various tabs, however, the key shortcuts make you faster. \n",
+        "With Jupyter you can write rich text notebooks with executable code via your browser. There are several so-called kernels or computational back ends, i.e Python, R, Julia, bash etc can be supported. The text is written as Markdown. Latex is also supported (good for math). You can export the notebook in various formats, e.g. html. Everything can be done via the various tabs, however, the key shortcuts make you faster.\n",
         "\n",
         "*Useful key combinations*\n",
         "\n",
@@ -234,9 +241,7 @@
       "metadata": {
         "id": "sfWe0grO06qJ"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -245,9 +250,7 @@
       "metadata": {
         "id": "bVjX2_Iy06qK"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -257,7 +260,7 @@
         "id": "hNySrhxP06qK"
       },
       "source": [
-        "Find out on wikipedia what this Iris data is about. "
+        "Find out on wikipedia what this Iris data is about."
       ]
     },
     {
@@ -281,10 +284,8 @@
         "id": "umgUyQ4i06qL",
         "outputId": "36a41ea5-850e-41cc-ae14-e6a01e1354c1"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": 110,
+      "source": [],
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -310,10 +311,8 @@
       "metadata": {
         "id": "ZctEUABs06qL"
       },
-      "source": [
-        ""
-      ],
-      "execution_count": 111,
+      "source": [],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -336,7 +335,7 @@
         "Read the Swiss BAG Corona data on vaccinated persons into a dataframe and look at it. The URL is\n",
         "https://opendata.swiss/en/dataset/covid-19-schweiz\n",
         "\n",
-        "You will probably need to consult https://pandas.pydata.org/docs/reference/io.html in order to find out how to read a json file into a pandas dataframe. "
+        "You will probably need to consult https://pandas.pydata.org/docs/reference/io.html in order to find out how to read a json file into a pandas dataframe."
       ]
     },
     {
@@ -355,9 +354,7 @@
       "metadata": {
         "id": "dIR8YyDP06qM"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -377,9 +374,7 @@
       "metadata": {
         "id": "R0sDmvr006qN"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -388,9 +383,7 @@
       "metadata": {
         "id": "HglpOox106qN"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -408,9 +401,7 @@
       "metadata": {
         "id": "CvKPHzP106qO"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -420,7 +411,7 @@
         "id": "8holfyZd06qO"
       },
       "source": [
-        "**Important** \n",
+        "**Important**\n",
         "When you assign a (subset) of dataframe to a new one like above, no copy is made. This means that if you change values of the new frame, also the orginal frame will be changed. If you want a copy, you need to use the copy method."
       ]
     },
@@ -438,9 +429,7 @@
       "metadata": {
         "id": "ZapUeo_x06qO"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -458,9 +447,7 @@
       "metadata": {
         "id": "BPqUoUYR06qP"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -469,9 +456,7 @@
       "metadata": {
         "id": "cp2J-Y0E06qP"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -489,9 +474,7 @@
       "metadata": {
         "id": "3dN1twE406qP"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -509,9 +492,7 @@
       "metadata": {
         "id": "SPJDgpc006qP"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -531,9 +512,7 @@
       "metadata": {
         "id": "d1hGqMMk06qQ"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -562,9 +541,7 @@
       "metadata": {
         "id": "PyaC-Aj006qQ"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -594,9 +571,7 @@
       "metadata": {
         "id": "XYCwukeI06qR"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -648,7 +623,7 @@
       "source": [
         "### 7. Exporting dataframes\n",
         "\n",
-        "DataFrame has several export methods. (html, hdf5, ascii, excel etc). Let's write our file to a text file in a csv format. "
+        "DataFrame has several export methods. (html, hdf5, ascii, excel etc). Let's write our file to a text file in a csv format."
       ]
     },
     {
@@ -656,9 +631,7 @@
       "metadata": {
         "id": "yhxN8bF_06qR"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -667,9 +640,7 @@
       "metadata": {
         "id": "b-27C7Vz06qR"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -691,8 +662,8 @@
         "### 8. Metadata\n",
         "\n",
         "\n",
-        "Metadata is data about the data, e.g. when was it collected, under which conditions, calibration etc. \n",
-        "Metadata is normally not part of the statistical data analysis, however, needed for understanding and reproducibilty. \n",
+        "Metadata is data about the data, e.g. when was it collected, under which conditions, calibration etc.\n",
+        "Metadata is normally not part of the statistical data analysis, however, needed for understanding and reproducibilty.\n",
         "\n",
         "DataFrame is not really made for storing metadata (should be done separately), but one can add new attributes to a dataframe:\n"
       ]
@@ -718,9 +689,9 @@
         "\n",
         "Write down here some minimal metadata about the Iris dataset:\n",
         "\n",
-        "- \n",
-        "- \n",
-        "- \n",
+        "-\n",
+        "-\n",
+        "-\n",
         "Summary: everything needed for reproduction\n",
         "\n",
         "(the \"dimensions of a numpy table or dataframe is often called the shape). 150x5x3"
@@ -734,9 +705,9 @@
       "source": [
         "### 9. Working on the filesystem with the os module\n",
         "\n",
-        "When managing large datasets, one often has to organise files in the file system. This includes finding them, moving and copying them, creating new folders/directories, renaming them etc. This can easily be done from Python with the os (operating system) module. \n",
+        "When managing large datasets, one often has to organise files in the file system. This includes finding them, moving and copying them, creating new folders/directories, renaming them etc. This can easily be done from Python with the os (operating system) module.\n",
         "\n",
-        "Try to understand the following code and alter it to do something else. "
+        "Try to understand the following code and alter it to do something else."
       ]
     },
     {
@@ -799,7 +770,7 @@
         "id": "8MZXt0ei06qT"
       },
       "source": [
-        "### Exercise 4 \n",
+        "### Exercise 4\n",
         "\n",
         "Print a sorted list of the weeks and the male deadths with COVID-19 in Switzerland. The weeks with the highest numbers should appear first. This should be doable with about 10 lines of Python. You may need 30 minutes to solve this one.\n"
       ]
@@ -820,9 +791,7 @@
       "metadata": {
         "id": "0G9RWCiH3DLC"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -843,9 +812,7 @@
       "metadata": {
         "id": "wvGsChGa06qT"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -854,9 +821,7 @@
       "metadata": {
         "id": "vPndicDx06qT"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     }
